# youtube_analytics

./: .gitignore  app.py  client_secret_web.json  pyproject.toml  youtube_analytics.ipynb  youtube_auth.ipynb  youtube_flask.ipynb
data/: wsgi.py
development/: app.py  youtube_analytics.ipynb
youtube_analytics_app/: __init__.py  routes.py  youtube_flask.py
youtube_analytics_app/dashboards/: sample_dash.py
youtube_analytics_app/templates/: layout.jinja2
