[tool.poetry]
name = "youtube-analytics"
version = "0.1.0"
description = "big data for a big guy"
authors = ["Chase <robertchasesommer@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
dash = "^2.9.3"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.86.0"
datetime = "^5.1"
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"
jupyter-dash = "^0.4.2"
nbformat = "^5.8.0"
ipykernel = "^6.23.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
